# legendre_pairs

./: .gitignore  A.c++  B.c++  Doxyfile.in  Makefile  Makefile.am  amicable.c++  aminclude.am  args.c++  args.h++  configure.ac  sequence.h++  set.c++  set.h++  tmp.txt  whiteman.c++
src/: A.c++  B.c++  Untitled.ipynb  amicable.c++  args.c++  args.h++  sequence.h++  set.c++  set.h++  whiteman.c++
